# ai-vn-system-backend

./: .gitignore  LICENSE  migrate_owned_items.py  migrate_protagonist.py  start.bat
backend/: .env.example  check_db.py  check_protagonist_schema.py  check_schema.py  config.py  finish_reset.py  generate_opening.py  init_protagonist_script.py  init_relationships.py  list_novels.py  list_tables.py  main.py  migrate_snapshots.py  pyproject.toml  pytest.ini  reset_novel_content.py  reset_state_sync.py  run_tests.py  test_phase3.py  verify_npcs.py
backend/agents/: calibrator.py  chronicler.py  dm.py  graph.py  npc.py  state.py
backend/api/: config_api.py  exchange.py  game.py  memory_api.py  narrator.py  novel.py  test_runner.py
backend/config_sys/: __init__.py  attribute_schema.py  builtin_item_types.py  item_type_plugin.py  llm_config_manager.py  registry.py
backend/data/: db_status.txt
backend/data/graphs/: 12c5ac18-2005-491c-b0da-1ec827bff09b.json  d7830720-bb9a-41d3-9009-f38133d564c1.json
backend/data/sys_config/: agents.json  llm_providers.json
backend/db/: models.py  queries.py
backend/exchange/: growth_service.py  pricing.py
backend/memory/: __init__.py  engine.py  extract_queue.py  retriever.py
backend/tests/: README.md  conftest.py  test_01_db.py  test_02_utils.py  test_03_agents.py  test_04_api.py  test_05_exchange.py  test_06_agents_advanced.py  test_07_api_integration.py  test_08_growth.py  test_09_schema_contract.py
backend/utils/: llm_client.py  locks.py  purity_check.py  tag_parser.py  var_engine.py
frontend/: index.html  vite.config.js
(+14 files in other folders)
